--- a/01/01.css
+++ b/01/01.css
@@ -12,3 +12,11 @@ p{
   letter-spacing: .01rem
 }
 
+#footer {
+  margin-top: 10px;
+  font-family: monospace;
+  font-size: 1rem;
+}
+.fa-heart {
+  color: pink;
+}
