--- a/01/01.css
+++ b/01/01.css
@@ -9,7 +9,12 @@ body {
 
 p{
   font-family: medium-content-serif-font,Georgia,Cambria,"Times New Roman",Times,serif;
-  letter-spacing: .01rem
+  letter-spacing: .01rem;
+  font-size: 21px;
+}
+
+p q {
+  font-size: 24px;
 }
 
 #footer {
